--- a/specification-derive/Cargo.toml
+++ b/specification-derive/Cargo.toml
@@ -14,5 +14,5 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = "1.0"
+syn = { version = "1.0", features = ["full"] }
 ebml-iterable-specification = { version = "=0.1.0", path = "../specification" }
