--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "ebml-iterable"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Austin Blake <austinl3roy@gmail.com>"]
 edition = "2018"
-description = "This crate provides an iterator over EBML encoded data.  The items provided by the iterator are Tags as defined in EBML.  The iterator is spec-agnostic and requires a specification implementing the TagSpec trait to read files.  Typically, you would only use this crate to implement a custom specification - most often you would prefer a crate providing an existing specification, like `webm-iterable`."
+description = "This crate provides an iterator over EBML encoded data.  The items provided by the iterator are Tags as defined in EBML.  The iterator is spec-agnostic and requires a specification implementing specific traits to read files.  Typically, you would only use this crate to implement a custom specification - most often you would prefer a crate providing an existing specification, like `webm-iterable`."
 readme = "README.md"
 license = "MIT"
 keywords = ["ebml", "encoding", "parser", "serialization"]
@@ -14,8 +14,8 @@ repository = "https://github.com/austinleroy/ebml-iterable"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ebml-iterable-specification = { version = "=0.1.0", path = "specification" }
-ebml-iterable-specification-derive = { version = "=0.1.0", path = "specification-derive", optional = true }
+ebml-iterable-specification = { version = "=0.2.0", path = "specification" }
+ebml-iterable-specification-derive = { version = "=0.2.0", path = "specification-derive", optional = true }
 
 [features]
 derive-spec = ["ebml-iterable-specification-derive"]
