--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/austinleroy/ebml-iterable"
 [dependencies]
 ebml-iterable-specification = { version = "=0.2.0", path = "specification" }
 ebml-iterable-specification-derive = { version = "=0.2.0", path = "specification-derive", optional = true }
+futures = "0.3.21"
 
 [features]
 derive-spec = ["ebml-iterable-specification-derive"]
