--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ebml-iterable"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Austin Blake <austinl3roy@gmail.com>"]
 edition = "2018"
 description = "This crate provides an iterator over EBML encoded data.  The items provided by the iterator are Tags as defined in EBML.  The iterator is spec-agnostic and requires a specification implementing specific traits to read files.  Typically, you would only use this crate to implement a custom specification - most often you would prefer a crate providing an existing specification, like `webm-iterable`."
@@ -16,7 +16,7 @@ repository = "https://github.com/austinleroy/ebml-iterable"
 [dependencies]
 ebml-iterable-specification = { version = "=0.4.0", path = "specification" }
 ebml-iterable-specification-derive = { version = "=0.4.0", path = "specification-derive", optional = true }
-futures = "0.3.21"
+futures = { version = "0.3.28", optional = true }
 
 [features]
 derive-spec = ["ebml-iterable-specification-derive"]
